--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,12 @@
 {
   "name": "job-portal-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon server.js"
   },
-  "author": "",
+  
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
